syntax = "proto3";
import "google/protobuf/empty.proto";

option java_package = "me.anmolverma.product";
option java_outer_classname = "Products";
option java_multiple_files = true;

message ProductFetchRequest {
  Category category = 1;
}

message ProductsResponse {
  int32 code = 1;
  string message = 2;
  repeated Product products = 3;
}

message CategoryResponse{
  int32 code = 1;
  string message = 2;
  repeated Category categories = 3;
}

message Product {
  int32 id = 1;
  string name = 2;
  repeated string imageUrls = 3;
  Category category = 4;
}

message Category {
  int32 id = 1;
  string name = 2;
}

service ProductService {
  rpc fetchProducts(ProductFetchRequest) returns (ProductsResponse);
  rpc fetchCategories(google.protobuf.Empty) returns (CategoryResponse);
}